# behaviour-executor

./: README.md
binary/.cargo/: config.toml
binary/src/: main.rs
firmware/: Cargo.toml
firmware/src/: behaviours.rs  json_events.rs  lib.rs  new_strips.rs  starting_events.rs  structs.rs
hardware/: Cargo.toml
hardware/src/: main.rs
