[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atsamd-hal = { version = "0.16.0", features = ["thumbv7", "samd51g"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
heapless = { version = "0.7.16", features = ["serde"] }
itsybitsy_m4 = "0.7.0"
micromath = "2.0.0"
smart-leds = "0.3.0"
smart-leds-trait = "0.2.1"
