[package]
name = "app"
version = "0.1.0"
edition = "2021"

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
heapless = { version = "0.7.16", features = ["serde"] }
itsybitsy_m4 = { version = "0.7.0", features = ["usb", "use_rtt"] }
panic-halt = "0.2.0"
panic-probe = "0.3.1"
panic-reset = "0.1.1"
smart-leds = "0.3.0"
smart-leds-trait = "0.2.1"
ws2812-timer-delay = { version = "0.3.0" }
firmware = { path = "../firmware" }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
microjson = "0.1.2"
cortex-m-semihosting = "0.5.0"
arrform = "0.1.1"

[package.metadata]
chip = "ATSAMD51G19A"
